# aimf

./: .gitignore  CMakeLists.txt
cli/: main.cpp
codecs/: codec_factory.cpp  dummy_codec.cpp
container/: chunk.cpp  compression.cpp  header.cpp  metadata.cpp  stream_table.cpp
include/: aimf.hpp  codec.hpp  codec_factory.hpp  compression.hpp  metadata.hpp
tools/: inspect.cpp  test_codec.cpp
